--- a/lib/po/fr.po
+++ b/lib/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GNU libgsasl 0.2.1\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-11-29 01:57+0100\n"
+"POT-Creation-Date: 2004-12-15 02:24+0100\n"
 "PO-Revision-Date: 2004-11-23 08:00-0500\n"
 "Last-Translator: Michel Robitaille <robitail@IRO.UMontreal.CA>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -177,8 +177,8 @@ msgid "Authentication failed because the host name was not provided."
 msgstr ""
 "Échec d'authentification parce que le nom de l'hôte n'a pas été fourni."
 
-msgid "Failed to perform Unicode Normalization on string."
-msgstr "Échec d'exécution de la Normalisation Unicode sur la chaîne."
+msgid "Could not prepare internationalized (non-ASCII) string."
+msgstr ""
 
 msgid "SASL function need larger buffer (internal error)"
 msgstr "Fonction SASL a besoin d'un plus grand tampon (erreur interne)"
@@ -304,6 +304,9 @@ msgid ""
 msgstr ""
 "Le mécanismes SASL a besoin de l'appel gsasl_client_callback_retrieve() "
 "(ERREUR de l'application)"
+
+msgid "Failed to perform Unicode Normalization on string."
+msgstr "Échec d'exécution de la Normalisation Unicode sur la chaîne."
 
 msgid "Libgsasl unknown error"
 msgstr "ERREUR libgsasl inconnue"
