--- a/lib/po/ga.po
+++ b/lib/po/ga.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.1.4\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-11-29 01:57+0100\n"
+"POT-Creation-Date: 2004-12-15 02:24+0100\n"
 "PO-Revision-Date: 2004-11-22 21:57-0500\n"
 "Last-Translator: Kevin Patrick Scannell <scannell@SLU.EDU>\n"
 "Language-Team: Irish <ga@li.org>\n"
@@ -168,7 +168,7 @@ msgstr ""
 msgid "Authentication failed because the host name was not provided."
 msgstr ""
 
-msgid "Failed to perform Unicode Normalization on string."
+msgid "Could not prepare internationalized (non-ASCII) string."
 msgstr ""
 
 msgid "SASL function need larger buffer (internal error)"
@@ -296,6 +296,9 @@ msgid ""
 msgstr ""
 "Teastaíonn an sásra SASL feidhm gsasl_server_callback_retrieve() (earráid "
 "fheidhmchláir)"
+
+msgid "Failed to perform Unicode Normalization on string."
+msgstr ""
 
 msgid "Libgsasl unknown error"
 msgstr "Libgsasl: earráid anaithnid"
