--- a/lib/po/nl.po
+++ b/lib/po/nl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.1.0\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-11-29 01:57+0100\n"
+"POT-Creation-Date: 2004-12-15 02:24+0100\n"
 "PO-Revision-Date: 2004-05-15 16:01+0200\n"
 "Last-Translator: Elros Cyriatan <cyriatan@fastmail.fm>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
@@ -166,7 +166,7 @@ msgstr ""
 msgid "Authentication failed because the host name was not provided."
 msgstr ""
 
-msgid "Failed to perform Unicode Normalization on string."
+msgid "Could not prepare internationalized (non-ASCII) string."
 msgstr ""
 
 msgid "SASL function need larger buffer (internal error)"
@@ -292,6 +292,9 @@ msgid ""
 msgstr ""
 "SASL-methode vereist gsasl_server_callback_retrieve() terugaanroep "
 "(toepassingsfout)"
+
+msgid "Failed to perform Unicode Normalization on string."
+msgstr ""
 
 msgid "Libgsasl unknown error"
 msgstr "Onbekende Libgsasl fout"
