--- a/lib/po/pl.po
+++ b/lib/po/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.2.1\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-11-29 01:57+0100\n"
+"POT-Creation-Date: 2004-12-15 02:24+0100\n"
 "PO-Revision-Date: 2004-11-21 23:31+0100\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -173,8 +173,8 @@ msgid "Authentication failed because the host name was not provided."
 msgstr ""
 "Uwierzytelnienie nie powiod³o siê, poniewa¿ nie przekazano nazwy hosta."
 
-msgid "Failed to perform Unicode Normalization on string."
-msgstr "Nie uda³o siê przeprowadziæ normalizacji unikodowej ³añcucha."
+msgid "Could not prepare internationalized (non-ASCII) string."
+msgstr ""
 
 msgid "SASL function need larger buffer (internal error)"
 msgstr "Funkcja SASL wymaga wiêkszego bufora (b³±d wewnêtrzny)"
@@ -299,6 +299,9 @@ msgid ""
 msgstr ""
 "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_retrieve() "
 "(b³±d aplikacji)"
+
+msgid "Failed to perform Unicode Normalization on string."
+msgstr "Nie uda³o siê przeprowadziæ normalizacji unikodowej ³añcucha."
 
 msgid "Libgsasl unknown error"
 msgstr "Nieznany b³±d libgsasl"
