--- a/lib/po/sr.po
+++ b/lib/po/sr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.1.4\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-11-29 01:57+0100\n"
+"POT-Creation-Date: 2004-12-15 02:24+0100\n"
 "PO-Revision-Date: 2004-08-31 20:52-0400\n"
 "Last-Translator: Aleksandar Jelenak <jelenak@netlinkplus.net>\n"
 "Language-Team: Serbian <gnu@prevod.org>\n"
@@ -164,7 +164,7 @@ msgstr ""
 msgid "Authentication failed because the host name was not provided."
 msgstr ""
 
-msgid "Failed to perform Unicode Normalization on string."
+msgid "Could not prepare internationalized (non-ASCII) string."
 msgstr ""
 
 msgid "SASL function need larger buffer (internal error)"
@@ -290,6 +290,9 @@ msgid ""
 msgstr ""
 "SASL методу потребан gsasl_server_callback_retrieve() повратни позив (грешка "
 "апликације)"
+
+msgid "Failed to perform Unicode Normalization on string."
+msgstr ""
 
 msgid "Libgsasl unknown error"
 msgstr "Libgsasl непозната грешка"
