--- a/lib/po/sv.po
+++ b/lib/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GNU libgsasl 0.0.15\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-11-29 01:57+0100\n"
+"POT-Creation-Date: 2004-12-15 02:24+0100\n"
 "PO-Revision-Date: 2004-04-16 00:19+0200\n"
 "Last-Translator: Simon Josefsson <simon@josefsson.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
@@ -142,7 +142,7 @@ msgstr ""
 msgid "Authentication failed because the host name was not provided."
 msgstr ""
 
-msgid "Failed to perform Unicode Normalization on string."
+msgid "Could not prepare internationalized (non-ASCII) string."
 msgstr ""
 
 msgid "SASL function need larger buffer (internal error)"
@@ -251,6 +251,9 @@ msgid ""
 "SASL mechanism needs gsasl_server_callback_retrieve() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
+
+msgid "Failed to perform Unicode Normalization on string."
+msgstr ""
 
 msgid "Libgsasl unknown error"
 msgstr "Okänt fel i libgsasl"
