--- a/lib/po/ro.po
+++ b/lib/po/ro.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.1.0\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-11-29 01:57+0100\n"
+"POT-Creation-Date: 2004-12-15 02:24+0100\n"
 "PO-Revision-Date: 2004-04-18 12:00-0500\n"
 "Last-Translator: Laurentiu Buzdugan <lbuz@rolix.org>\n"
 "Language-Team: Romanian <translation-team-ro@lists.sourceforge.net>\n"
@@ -169,7 +169,7 @@ msgstr ""
 msgid "Authentication failed because the host name was not provided."
 msgstr ""
 
-msgid "Failed to perform Unicode Normalization on string."
+msgid "Could not prepare internationalized (non-ASCII) string."
 msgstr ""
 
 msgid "SASL function need larger buffer (internal error)"
@@ -295,6 +295,9 @@ msgid ""
 msgstr ""
 "Mecanismul SASL are nevoie de callback-ul gsasl_server_callback_retrieve() "
 "(eroare aplicaþie)"
+
+msgid "Failed to perform Unicode Normalization on string."
+msgstr ""
 
 msgid "Libgsasl unknown error"
 msgstr "Eroare libgsasl necunoscutã"
