--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -1898,22 +1898,25 @@ we felt were necessary to include, if for nothing else it may serve as
 a guide for other implementors that worry about the same issues.
 
 @menu
-* Server-side use of SASLPrep in CRAM-MD5::
+* Use of SASLPrep in CRAM-MD5::
 * Use of SASLprep in LOGIN::
 @end menu
 
-@node Server-side use of SASLPrep in CRAM-MD5
-@section Server-side use of SASLPrep in CRAM-MD5
+@node Use of SASLPrep in CRAM-MD5
+@section Use of SASLPrep in CRAM-MD5
 
-The specification, as of draft-ietf-sasl-crammd5-02, is silent on
-whether a SASL server implementation applying SASLPrep on a password
-received from an external, non-SASL specific database (i.e., the
-passwords are not stored in SASLPrep form in the database), should set
-or clear the AllowUnassigned bit.  The motivation for the AU-bit in
-StringPrep/SASLPrep is for stored vs query strings.  It could be
+The specification, as of @file{draft-ietf-sasl-crammd5-04.txt}, is
+silent on whether a SASL server implementation applying SASLPrep on a
+password received from an external, non-SASL specific database (i.e.,
+the passwords are not stored in SASLPrep form in the database), should
+set or clear the AllowUnassigned bit.  The motivation for the AU-bit
+in StringPrep/SASLPrep is for stored vs query strings.  It could be
 argued that in this situation the server can treat the external
 password either as a stored string (from a database) or as a query
 (the server uses the string as a query into the fixed HMAC-MD5 hash).
+
+The specification is also unclear on whether clients should set or
+clear the AllowUnassigned flag.
 
 In the server, GNU SASL apply SASLPrep to the password with the
 AllowUnassigned bit cleared.
