--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.4 (unreleased)
+
 * Version 0.2.3 (released 2004-12-15)
 
 ** Fix example code to handle base64 encoded data properly.
