--- a/lib/digest-md5/README
+++ b/lib/digest-md5/README
@@ -2,18 +2,16 @@ DIGEST-MD5 README -- Notes on the implementation
 Copyright (C) 2004 Simon Josefsson
 See the end for copying conditions.
 
-(--- This README talks about the rewritten implementation, not all
-part of it is yet in CVS. ---)
-
 This directory hold an implementation of DIGEST-MD5.
 
 This module is written in portable C89.  It may be used as a
-stand-alone implementation, outside the framework that GNU SASL
-provide.
+stand-alone implementation, outside of the framework that GNU SASL
+provide.  It needs two external symbols, gc_md5 and gc_hmac_md5, which
+should be easy to re-implement, if you are not using libgc.
 
 The files CLIENT.C and SERVER.C contain the glue between GNU SASL and
-the stand-alone implementation, read it to find out how to use the
-module.
+the stand-alone implementation.  Currently it is the best example on
+how to use the module.
 
 For updates to the project, see <http://www.gnu.org/software/gsasl/>.
 
