--- a/lib/NEWS
+++ b/lib/NEWS
@@ -7,7 +7,7 @@ See the end for copying conditions.
 ** The DIGEST-MD5 mechanism is rewritten and enabled by default.
 The implementation is written so it can be used separately from GNU
 SASL in your own product, it only uses C89 and two external symbols
-for MD5 and HMAC-MD5.
+for MD5 and HMAC-MD5.  For more information, see digest-md5/README.
 
 ** Improved robustness of callback backwards compatibility.
 
