--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 GNU SASL NEWS -- History of user-visible changes.
-Copyright (C) 2002, 2003, 2004 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005 Simon Josefsson
 See the end for copying conditions.
 
 Note that changes to the GNU SASL Library is documented in lib/NEWS.
@@ -11,8 +11,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 ** Fixed a bug in base64 handling that prevented SMTP client from working.
 
 ** New configure option --disable-obsolete to remove backwards compatibility.
-This is mostly intended to be used when cross compiling to platforms
-with limited memory.
+This is mostly intended to be used when compiling for platforms with
+constrained memory/space resources.
 
 ** DIGEST-MD5 rewritten and enabled by default (see lib/NEWS for details).
 
